*** wrape issue again

--- a/sites/all/modules/gj_deanhopkins_privatemsg/css/gj_deanhopkins_privatemsg.css
+++ b/sites/all/modules/gj_deanhopkins_privatemsg/css/gj_deanhopkins_privatemsg.css
@@ -333,7 +333,7 @@ ul .action-links{ margin-top: 70px !important; }
 
 @media screen and (max-width:992px) {
     .message-header-col{
-        padding-right: 0px !important;
+        padding-right: 15px !important;
 }
 @media screen and (max-width:876px) {
 
